--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,14 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        release {
+            storeFile file("../signing/Nislavaccum")
+            storePassword 'Nislavaccum'
+            keyAlias 'Nislavaccum'
+            keyPassword 'Nislavaccum'
+        }
+    }
     compileSdk 31
 
     defaultConfig {
@@ -18,6 +26,7 @@ android {
 
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
