Rework DB structure & Assisted VM's for details.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,12 @@ android {
         targetSdk 31
         versionCode 1
         versionName "1.0"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     buildTypes {
