--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,7 +78,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling:1.3.2'
 
     implementation 'com.google.android.material:material:1.7.0'
-    implementation "com.google.android.material:compose-theme-adapter:1.2.1"
+    implementation "com.google.accompanist:accompanist-themeadapter-material:0.28.0"
     implementation 'androidx.compose.material:material:1.3.1'
 
     implementation 'com.google.dagger:hilt-android:2.44.2'
