--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
-    id 'org.jetbrains.kotlin.kapt' version '1.7.20' apply false
+    id 'org.jetbrains.kotlin.kapt' version '1.8.10' apply false
+    id 'com.google.devtools.ksp' version '1.8.10-1.0.9' apply false
     id 'com.google.dagger.hilt.android' version '2.44.2' apply false
 }
 
