--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,11 +39,14 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+    kotlin {
+        jvmToolchain(JavaVersion.VERSION_11.majorVersion.toInteger())
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_11.majorVersion
     }
     buildFeatures {
         compose true
