--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'org.jetbrains.kotlin.kapt'
-    id 'com.google.devtools.ksp'
+    // id 'com.google.devtools.ksp'
     id 'dagger.hilt.android.plugin'
 }
 
@@ -94,5 +94,6 @@ dependencies {
 
     implementation "androidx.room:room-ktx:2.5.0"
     implementation "androidx.room:room-runtime:2.5.0"
-    ksp "androidx.room:room-compiler:2.5.0"
+    kapt "androidx.room:room-compiler:2.5.0"
+    // ksp "androidx.room:room-compiler:2.5.0"
 }
