--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0'
+    implementation "androidx.lifecycle:lifecycle-runtime-compose"
 
     implementation 'androidx.compose.animation:animation'
     implementation 'androidx.compose.ui:ui-tooling'
